--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,9 @@
 @plugin "daisyui" {
 	themes: all;
 }
+
+.rampart {
+	font-family: "Rampart One", sans-serif;
+	font-weight: 400;
+	font-style: normal;
+}
